# pothole_detection

./: README.md  calibration.py  detection.cpp  image_coder.py  image_info.py  lidar_bag.py  lidar_bag_info.py  open3d_test.py  train.py
codes/: image_coder.py  lidar_bag_info.py  open3d_test.py
codes/pothole/: pothole_detection.cpp
final/: 552_detected.ply  559_detected.ply  847_detected.ply  code.py
pothole/: CMakeLists.txt  pothole_detection.cpp
